--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "id": "5cf8f702",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss 0.8863288807576205\n"
+      "loss 0.905290576892303\n"
      ]
     }
    ],
@@ -324,8 +324,9 @@
     "\n",
     "initial_w = np.zeros((tx.shape[1], 1))\n",
     "\n",
-    "\n",
-    "w_lr, loss_lr = logistic_regression(y,tx, initial_w, 100000, 0.00001)\n",
+    "iter_num = 10000000\n",
+    "gamma = 0.00001\n",
+    "w_lr, loss_lr = logistic_regression(y,tx, initial_w, iter_num, gamma)\n",
     "print(\"loss\", np.sqrt(2*loss_lr[0][0]))\n",
     "#print(w_ls, \"\\n\", w_lr)\n",
     "\n",
@@ -334,9 +335,33 @@
     "#having a very small gamma solves this problem\n",
     "#the minimal value I could find is 0.8540791315850801 (with rmse 100 samples)\n",
     "\n",
+    "\n",
     "# with 400 samples --> when gamma = 0.0001\n",
     "# it diverges because when iterations increases the loss increases\n",
-    "# with gamma = 0.00007 or lower --> it does not diverge (RMSE 0.88633 with 10000 iter, same for 100000)"
+    "# with gamma = 0.00007 or lower --> it does not diverge (RMSE 0.88633 with 10000 iter, same for 100000)\n",
+    "#after 10000 iter the loss reduces very slowly --> we are close to the optimum and the remaining 90000 iter are\n",
+    "# just fine refinements (we are moving around the optimum)\n",
+    "# as gamma increases --> computational time decreases but only under a certain threshold\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0ef0b127",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.18047572392310723\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linalg.norm(w_lr))\n",
+    "\n",
+    "# as the number of iterations increases the norm increases"
    ]
   },
   {
@@ -349,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a08a3b07",
    "metadata": {},
    "outputs": [
@@ -357,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss :  [[0.79609599]] test loss :  [[0.87149819]]\n"
+      "train loss :  [[0.84321116]] test loss :  [[0.84932374]]\n"
      ]
     }
    ],
@@ -383,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "186916b3",
    "metadata": {},
    "outputs": [
@@ -391,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss :  [[0.86298348]] test loss :  [[0.84640193]]\n"
+      "train loss :  [[0.90813365]] test loss :  [[0.88699132]]\n"
      ]
     }
    ],
@@ -400,7 +425,8 @@
     "print(\"train loss : \", loss_train, \"test loss : \", loss_test)\n",
     "\n",
     "# model is generalizable (test loss is lower than train loss)\n",
-    "# logistic regression is more appropriate to this dataset as y is binary"
+    "# logistic regression is more appropriate to this dataset as y is binary\n",
+    "# there might be a bit of underfit "
    ]
   },
   {
@@ -451,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "id": "befbb685",
    "metadata": {},
    "outputs": [
@@ -459,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss 0.9131610667707206\n"
+      "loss 0.9302020251662649\n"
      ]
     }
    ],
@@ -468,14 +494,39 @@
     "\n",
     "initial_w = np.zeros((tx.shape[1], 1))\n",
     "\n",
+    "lambda_ = 1\n",
     "\n",
-    "w_lr, loss_lr = reg_logistic_regression(y,tx, 1, initial_w, 100000, 0.00001)\n",
+    "w_lr, loss_lr = reg_logistic_regression(y,tx, lambda_, initial_w, 100000, 0.00001)\n",
     "print(\"loss\", np.sqrt(2*loss_lr[0][0]))\n",
     "#print(w_ls, \"\\n\", w_lr)\n",
     "\n",
     "# if gamma bigger than 0.00001 --> diverge\n",
     "# if lambda = 0 --> no regularization (loss 0.88632)\n",
-    "# if lambda increases --> loss increases (0.8898)"
+    "# if lambda increases --> loss increases (0.8898)--> l2 norm of final weights vector decreases\n",
+    "# we avoid overfitting because we penalize large weights with the L2 norm\n",
+    "# if we set lambda to zero --> we go back to normal logistic regression\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e7a59ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1297329413911314"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(w_lr)"
    ]
   },
   {
@@ -488,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 48,
    "id": "4f11d1b1",
    "metadata": {},
    "outputs": [
@@ -496,19 +547,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss :  [[0.86298484]] test loss :  [[0.84640334]]\n"
+      "train loss :  [[0.90813373]] test loss :  [[0.8869914]]\n"
      ]
     }
    ],
    "source": [
     "from cross_validation import *\n",
     "k=1\n",
-    "lambda_=0.00001\n",
+    "lambda_=0.000001\n",
     "loss_train, loss_test = cross_validation_reg_logistic_regression(y, x, k_indices, k,lambda_)\n",
     "print(\"train loss : \", loss_train, \"test loss : \", loss_test)\n",
     "\n",
-    "# we see that no overfitting\n",
-    "# "
+    "# we see that the loss both with logistic regression and reg logistic regression is similar\n",
+    "# no need to regularize because the data are not lineraly separable \n",
+    "# (if they were --> we would never find a vector with logistic regression as it would go to infinity)\n",
+    "# test loss is better with log than reg log\n"
    ]
   },
   {
@@ -546,7 +599,10 @@
     }
    ],
    "source": [
-    "best_lambda, best_rmse = find_best_lambda_reg_logistic_regression(x, y, 7, np.logspace(-4, 0, 30))\n"
+    "best_lambda, best_rmse = find_best_lambda_reg_logistic_regression(x, y, 7, np.logspace(-4, 0, 30))\n",
+    "\n",
+    "# we see that when regularizing --> we just increase rmse both for train and test \n",
+    "# do not understand why reversed"
    ]
   },
   {
@@ -560,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -574,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
